styling - fixing spacing and score count

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 .container {
-background-color: black;
+  background-color: black;
 }
 
 img {
@@ -37,4 +37,8 @@ button {
 .displayedScores {
   font-size: 80px;
   text-align: center;
+}
+
+#winScore, #lossesScore {
+  font-size: 25px;
 }
